--- a/bungeecord/bungeecord.gradle
+++ b/bungeecord/bungeecord.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'kr.entree.spigradle.bungee' version '2.1.1'
+    id 'io.typst.spigradle.bungee' version '3.1.2'
 }
 
 group 'kr.entree'
@@ -8,8 +8,14 @@ version '1.0-SNAPSHOT'
 
 compileJava.options.encoding 'UTF-8'
 
+repositories {
+    mavenCentral()
+    sonatype()
+    minecraftLibraries()
+}
+
 dependencies {
-    compileOnly bungeecord('1.15')
+    compileOnly bungeecord()
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
