--- a/bungeecord/build.gradle
+++ b/bungeecord/build.gradle
@@ -1,12 +1,7 @@
 plugins {
     id 'java'
-    id 'io.typst.spigradle.bungee' version '3.1.2'
+    alias libs.plugins.spigradle.bungee
 }
-
-group 'kr.entree'
-version '1.0-SNAPSHOT'
-
-compileJava.options.encoding 'UTF-8'
 
 repositories {
     mavenCentral()
