--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -1,44 +1,55 @@
 plugins {
     id 'java'
-    alias libs.plugins.spigradle.spigot
+    alias spigots.plugins.spigot
+    alias commons.plugins.ideaExt
 }
 
 repositories {
     mavenCentral()
-    papermc()
-    jitpack() // For vault
+    spigotRepos {
+        papermc()
+        jitpack()
+    }
 }
 
 dependencies {
-    compileOnly paper('1.21.8')
-    compileOnly protocolLib('5.4.0')
-    compileOnly(vault()) {
+    compileOnly spigots.paper.api
+    compileOnly spigots.protocolLib
+    compileOnly(spigots.vault.api) {
         transitive = false // No want to import vault's internal dependencies.
     }
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation(platform(commons.junit.bom))
+    testImplementation(commons.junit.jupiter)
+    testRuntimeOnly(commons.junit.platform.launcher)
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21))
+    }
 }
 
 spigot {
-    description 'A sample plugin'
-    depends 'ProtocolLib', 'Vault'
-    apiVersion '1.21'
-    load STARTUP // or implicitly "load STARTUP".
+    description = 'A sample plugin'
+    depend = ['ProtocolLib', 'Vault']
+    apiVersion = '1.21'
+    load = "STARTUP"
     commands {
         register('give') {
-            aliases 'giv', 'i'
-            description 'A give command.'
-            permission 'sample.give'
-            permissionMessage 'You do not have the permission.'
+            aliases = ['giv', 'i']
+            description = 'A give command.'
+            permission = 'sample.give'
+            permissionMessage = 'You do not have the permission.'
         }
     }
     permissions {
         register('sample.give') {
-            description 'Allows give command'
-            defaults 'true'
+            description = 'Allows give command'
+            defaults = 'true'
         }
         register('sample.*') {
-            description 'Wildcard permission'
-            defaults 'op'
+            description = 'Wildcard permission'
+            defaults = 'op'
             children = ['test.foo': true]
         }
     }
@@ -47,10 +58,4 @@ spigot {
 debugSpigot {
     version.set('1.21.8')
     eula.set(true)
-}
-
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(21))
-    }
 }
